<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eDOTS</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">Send</string>
    <string name="button_checkFingerPrint">Check Finger Print</string>
    <string name="button_promoter_login"> Login</string>
    <string name="confirm_patient">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="check_finger_print_scan_on_device">Scan On Device</string>
    <string name="check_finger_print_done">Done</string>
    <string name="data_format">dd/MM/yyyy</string>
    <string name="dialog_confirm_patient">Is this the patient?</string>
    <string name="done"> Done</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_number">Phone Number</string>
    <string name="schema_days">Schema Days</string>
    <string name="schema_start_day">Schema Start Day</string>
    <string name="schema_end_day">Schema End Day</string>
    <string name="existing_patient"> Existing Patient</string>
    <string name="get_patient_button_use_national_id">Search</string>
    <string name="get_patient_search_new_patient">Search for new patient</string>
    <string name="get_patient_button_checkFingerPrint">Scan Fingerprint</string>
    <string name="get_patient_or">Or</string>
    <string name="message">You have missed your appointment.</string>
    <string name="patient_not_found">Patient not found!</string>
    <string name="patient_home_button_checkMedicalHistory">History</string>
    <string name="patient_home_button_logNewVisit">New Visit</string>
    <string name="patient_home_id_number">National ID Number:</string>
    <string name="patient_home_name">Name:</string>
    <string name="register_participant">Register Participant</string>
    <string name="log_out">Log Out</string>
    <string name="send_sms">Send SMS</string>
    <string name="title_activity_get_patient">Existing Patient</string>
    <string name="title_activity_new_patient_data">Register Patient</string>
    <string name="title_activity_check_finger_print">FingerPrint</string>
    <string name="title_activity_confirm_patient">Confirm Patient</string>
    <string name="title_activity_patient_home">Patient Home</string>
    <string name="title_activity_medical_history">Medical History</string>
    <string name="title_activity_new_visit">New Visit</string>
    <string name="title_activity_promoter_login">Login</string>
    <string name="title_activity_patient_type">PatientTypeActivity</string>
    <string name="name"> Name </string>
    <string name="national_ID"> National ID</string>
    <string name="scan_fingerprint"> Scan Fingerprint</string>
    <string name="new_patient_data_name"> Name</string>
    <string name="fathers_name"> Father\`s Name</string>
    <string name="mothers_name"> Mother\`s Name</string>
    <string name="birthdate"> Birthdate</string>
    <string name="sex"> Sex</string>
    <string name="ID">ID</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="new_visit_site">Site</string>
    <string name="schema">Schema</string>
    <string name="new_visit_done">Submit</string>
    <string name="locale"> Locale</string>
    <string name="select_locale">Select a Local!!</string>
    <string name="login_try_again">Try Again</string>
    <string name="show_selected_local">Show Selected Local</string>
    <string name="txtLocal">Local</string>
    <string name="hello_world">Hello World</string>
    <string name="form_hint1">Hello World</string>
    <string name="username">username</string>
    <string name="login_password">password</string>
    <string name="project">project</string>
    <string name="visit_group">visit group</string>
    <string name="visit">visit</string>
    <string name="key_userid">userid</string>
    <string name="login_locale">local_id</string>
    <string name="login_locale_name">local_name</string>
    <string name="session_init_key">Gracias por Iniciar Sesion</string>
    <string name="password_expired_key">Contraseña caducada</string>
    <string name="view_all_patients">View all Patients</string>
<string name="locale_filename">locale_data</string>
    <string name="title_activity_main">Main Menu</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>
    <string name="new_visit_date">New Visit Data</string>
    <string name="patient_select_spinner">Select Patient</string>
    <string name="get_patient_select_patient">Select Your Patient</string>
    <string name="no_internet_title">Connection Error</string>
    <string name="no_internet_connection">Error connecting to internet</string>
    <string name="patient_data_filename">patient_data</string>
    <string name="promoter_data_filename">promoter_data</string>
    <string name="new_visit_filename">new_visit_data</string>
 <string name="refresh">Refresh</string>
    <string name="visits_data_filename">visits_data</string>
    <string name="sms_sent">SMS SENT</string>
    <string name="sms_delivered">SMS DELIVERED</string>
    <string name="patient_not_found_new_patient">Would you like to register a new patient?</string>
    <string name="add_patient">Add Patient</string>
    <string name="patient_not_listed">Patient Not Listed</string>
    <string name="patient_not_listed_add_patient">This patient is not listed as one of your patients. Would you like to add this patient?</string>
    <string name="title_activity_show_visit">Past Visit</string>
    <string name="medical_history_see_full_history">See Full Patient History</string>
    <string name="login_error_message"> Your username or password was incorrect or invalid</string>
    <string name="server_url">http://demo.sociosensalud.org.pe</string>
    <string name="missed">Missed</string>
    <string name="received">Received</string>
    <string name="future">Future</string>
    <string name="past_week">Past Week: </string>
    <string name="past_month">Past Month: </string>
    <string name="total">Total: </string>
    <string name="title_activity_change_schema">ChangeSchemaActivity</string>
    <string name="edots_code">5</string>
    <string name="last_updated">Local storage last updated</string>
    <string name="test_phone_1">943229757</string>
    <string name="test_phone_2">943206118</string>
    <string name="visit_mode">Visit Mode</string>
    <string name="patient_home">Patient Home</string>
    <string name="clinic">Clinic</string>
    <string name="drugs">Drugs</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="edit_schema">Edit Schema</string>
    <string name="schema_information">Schema Information</string>
    <string name="new_visit_upload_error_message">This visit will be saved locally and uploaded when internet resumes</string>
    <string name="upload_visit_success">Locally saved visit uploaded successfully</string>
    <string name="schema_filename">schema_data</string>

    
    <string name="capture">Capture</string><string name="init">Initialize</string>
    <string name="ledon">LED</string>
    <string name="ledoff">LED Off</string>
    <string name="sdktest">SDK Test</string>
    <string name="toggle_led">Toggle LED</string>
    <string name="match">Verify</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome!</string>
    <string name="cb_matched">Match</string>
    <string name="cb_scenabled">SC En</string>
    <string name="auto_on">Auto On</string>
    <string name="smart_capture">Smart Capture</string>
    <string name="smart_capture_on">Smart Cap ON</string>
    <string name="smart_capture_off">Smart Cap OFF</string>
    <string name="auto_on_enabled">AutoOn Enabled</string>
    <string name="auto_on_disabled">AutoOn Disabled</string>


</resources>
