<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context="org.techintheworld.www.edots.MainMenuActivity"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_participant"
        android:onClick="newPatient"
        android:layout_weight="0.12"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/existing_patient"
        android:onClick="oldPatient"
        android:layout_weight="0.12"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btnSendSMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_sms"
        android:layout_weight="0.12"
        android:onClick="SendSMS"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:onClick="logOut"
        android:layout_weight="0.12"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/refresh"
        android:onClick="updateLocalManual"
        android:drawableTop="@drawable/ic_action_refresh"
        android:id="@+id/imageButton"
        android:layout_weight="0" />

</LinearLayout>
