<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.techintheworld.www.edots.ChangeSchemaActivity">

    <ScrollView
        android:id="@+id/changeSchema_ScrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/changeSchema_LinearLayout"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent"
            android:weightSum="1">

            <!--notification for no internet -->
            <TextView
                android:layout_width="fill_parent"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_height="32sp"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@color/light_red"
                android:visibility="gone"
                android:id="@+id/internet_status"
                android:text="@string/no_internet_connection"/>

            <!--national ID field-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/national_ID"/>

            <EditText
                android:id="@+id/changeSchema_National_ID"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:digits="1234567890"
                android:layout_width="fill_parent">
            </EditText>

            <!--name field-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/new_patient_data_name"/>

            <EditText
                android:id="@+id/changeSchema_Name"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_width="fill_parent">
            </EditText>



            <!--Active schemas field-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/schema"/>

            <ListView
                android:id="@+id/changeSchema_schemas"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:cacheColorHint="@android:color/transparent"
                android:divider="#CCCCCC"
                android:dividerHeight="1dp"
                android:paddingLeft="2dp" >
            </ListView>

            <!--schema Start Day field-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/schema_start_day"/>

            <EditText
                android:id="@+id/changeSchema_schema_start_day"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:focusable="false">
            </EditText>

            <!--Schema End Day field-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/schema_end_day"/>

            <EditText
                android:id="@+id/changeSchema_schema_end_day"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:focusable="false">
            </EditText>

            <!--Schema Days field-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/schema_days"/>

            <ListView
                android:id="@+id/changeSchema_schema_days"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:cacheColorHint="@android:color/transparent"
                android:divider="#CCCCCC"
                android:dividerHeight="1dp"
                android:paddingLeft="2dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
